styling a little  bit

--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,42 @@
 * {
   margin: 0;
   padding: 0;
+  outline: none;
   box-sizing: border-box;
 }
+
+:root{
+  --primary-color:#0b3fcc;
+  --primary-background:linear-gradient(60deg, #0b3fcc 30%, #4811c7 70%);
+  --secondary-color: green;
+  --background-gradient: linear-gradient(120deg, #15572d 20%, #235848 100%);
+}
+
 body {
-  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(48, 16, 255, 1) 0%,
+    rgba(100, 115, 255, 1) 100%
+  );
   color: white;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
+
+.container{
+  background-color: black;
+  max-width: 600px;
+  border-radius: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  
+}
+
 header {
   font-size: 2rem;
 }
@@ -20,24 +48,41 @@ form {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 form input,
 form button {
   padding: 0.5rem;
-  font-size: 2rem;
-  border: none;
-  background: white;
+  font-size: 1.5rem;
+  text-align: left;
+}
+
+form input[type="text"]{
+  min-width: 70px;
+  width: 100%;
+  max-width: 250px;
+  height: 60px;
+  background-color: black;
+  color: white;
+  border: var(--primary-color) 2px solid
+}
+
+form input[type="text"]:focus{
+  background-color: black;
+  color: white;
+  border: var(--primary-color) 2px solid;
 }
 form button {
-  color: #ff6f47;
-  background: #f7fffe;
+  background: var(--primary-background);
+  color: white;
+  border: var(--primary-color) 2px solid;
   cursor: pointer;
   transition: all 0.3s ease;
+  height: 60px;
+
 }
-form button:hover {
-  background: #ff6f47;
-  color: white;
-}
+
 .todo-container {
   display: flex;
   justify-content: center;
@@ -50,15 +95,30 @@ form button:hover {
 }
 
 .todo {
+  padding-left: 10px;
   margin: 0.5rem;
   background: white;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
   transition: all 1s ease;
+  border-radius: 16px;
+  overflow: hidden;
+
 }
+
+.todo input[type="checkbox"]{
+  transform: scale(1.5);
+  opacity: 0;
+
+}
+
+.todo:hover input[type="checkbox"]{
+  opacity: 1;
+}
+
 .filter-todo {
   padding: 1rem;
 }
@@ -66,20 +126,28 @@ form button:hover {
   flex: 1;
 }
 
-.trash-btn,
-.complete-btn {
-  background: #ff6f47;
+.trash-btn {
+  background: rgb(235, 52, 52);
   color: white;
   border: none;
   padding: 1rem;
   cursor: pointer;
   font-size: 1rem;
+  height: 100%;
 }
-.complete-btn {
-  background: rgb(11, 212, 162);
+
+.todo button{
+  opacity: 0;
 }
+
+.todo:hover button{
+  opacity: 1;
+}
+
 .todo-item {
   padding: 0rem 0.5rem;
+  max-width: 400px;
+  border-radius: 20px;
 }
 
 .fa-trash,
@@ -87,14 +155,9 @@ form button:hover {
   pointer-events: none;
 }
 
-.fall {
-  transform: translateY(10rem) rotateZ(20deg);
-  opacity: 0;
-}
 
 .completed {
   text-decoration: line-through;
-  opacity: 0.5;
 }
 
 /*CUSTOM SELECTOR */
@@ -114,12 +177,16 @@ select {
   margin: 1rem;
   position: relative;
   overflow: hidden;
+  border: var(--primary-color) 2px solid;
 }
 select {
-  color: #ff6f47;
+  color: white;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
-  width: 12rem;
+  min-width: 9rem;
+  width: 9rem;
+  max-width: 9rem;
+  background-color: black;
 }
 /* Arrow */
 .select::after {
@@ -127,8 +194,10 @@ select {
   position: absolute;
   top: 0;
   right: 0;
-  padding: 1rem;
-  background: #ff6f47;
+  padding: 0.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background: var(--primary-background);
   cursor: pointer;
   pointer-events: none;
 }
@@ -150,6 +219,16 @@ select {
 
 
 .completed{
-  background-color: green;
+  background: var(--background-gradient);
   color: white;
+}
+
+@media screen and (max-width: 400px){
+  .select::after{
+    opacity: 0;
+  }
+
+  .select{
+    padding-left: none!important;
+  }
 }
