--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,16 @@ body {
   );
   color: white;
   font-family: "Poppins", sans-serif;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.center{
   min-height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 
 .container{
@@ -35,7 +39,7 @@ body {
   border-radius: 15px;
   padding-top: 20px;
   padding-bottom: 20px;
-  
+  background-image: radial-gradient(circle at top right, #1f1d44, #140d2d, #000000);
 }
 
 header {
