--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,11 @@
   --background-gradient: linear-gradient(120deg, #15572d 20%, #235848 100%);
   --deleting-red: rgb(206, 46, 46);
 }
+
+.animate__animated
+ {
+  --animate-duration: 0.5s!important;
+}
 body {
   background: linear-gradient(
     90deg,
@@ -151,8 +156,9 @@ ul{
   transition-property: background-position, background-color, opacity, margin-left;
   transition-duration: 0.5s;
 
+
   padding-left: 10px;
-  margin: 0.5rem;
+  margin: 0.8rem;
   font-size: 1.2rem;
   color: white;
   display: flex;
